--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       var oauthToken;
       var comments;
+      var backup;
 
 
       /**
@@ -176,6 +177,9 @@
           printFile('1bhrOjaW_1b3fNcN4aXkuUDb9nLKYSJewSYoIo3zXVc8');
           return
 
+          // console.log("Grabbing session 13");
+          // printFile('1uddywgTgSoVJgYJkNZHeO8D5Km2tFsdy1muDjwLXBag');
+          // return
           
           // USE THE STUFF BELOW HERE TO ACTUALLY PICK UP THE ID
           console.log("about to pick something w/ ", oauthToken);
@@ -226,6 +230,7 @@
           // handle underscores?
           text = text.replace(/_/g, "\\_")
           text = text.replace(/\[/g, "{[}")
+          text = text.replace(/%/g, "\\%")
           text = text.replace(/&/g, "\\&")
           text = text.replace(/]/g, "{]}")
 
@@ -249,6 +254,8 @@
           if (orig_text != text) {
             console.debug("we just scrubbed "+ text);
           }
+
+          text = text.replace(/\u00A0/g, " ");
           return text;
       }
 
@@ -273,8 +280,10 @@
       }
 
       function latexIt() {
-        var backup = $('.guts').clone();
+        backup = $('.guts').clone();
         var copy = $('.guts');
+        var chapter_title = "";
+        var chapter_count = 1;
 
         inject_footnote_pre_markup(copy);
 
@@ -295,6 +304,10 @@
         });
 
         console.log("we're checking the font/color for "+copy.find('span').length)
+        copy.find('hr').each(function(i,x) {
+          var el = $(x);
+          el.after('<p><span style="font-size: 10px;">ADD_LINE_HERE</span></p>');
+        });
         copy.find('span').each(function(i, x) {
           var el = $(x);
           if (! el.text()) {
@@ -316,16 +329,40 @@
           }
           var font_size_str = el.css('font-size');
           if (font_size_str && parseInt(font_size_str.substring(0, font_size_str.length - 2)) > 14) {
+            var s = el.text().toLowerCase();
             size = parseInt(font_size_str.substring(0, font_size_str.length - 2))
             console.debug("making the text HUGE because size is "+size+": "+el.text());
-            el.text(" {\\huge "+el.text()+" } ");
+            if (s.indexOf('session') == -1 && !chapter_title) {
+              chapter_title += el.text() +" ";
+              el.text("");
+            } else if (s.indexOf('session ') > -1 && chapter_count == 1) {
+              var s = 
+              chapter_count = s.substr(s.indexOf("session")+"session ".length);
+              el.text("");
+            } else {
+              el.text(" {\\huge "+el.text()+" } ");
+            }
           }
 
           if (el.css('text-align') == "center") {
             el.text("\\begin{center}\n"+el.text()+"\n\\end{center}\n");
           }
-        });
 
+          if (el.css('text-decoration') == "underline") {
+            el.text("\\underline{ "+el.text()+" }");
+          }
+        });
+        copy.find('ul,ol').each(function(i, x) {
+          var el = $(x);
+          var type = (el[0].tagName == 'OL') ? 'enumerate' : 'itemize';
+          var s = "";
+          el.find('li').each(function(j, y) {
+            var el2 = $(y);
+            s += "\\item "+el2.text()+"\n";
+          });
+          el.before("<p><span>\\begin{"+type+"}\n"+s+"\\end{"+type+"}</span></p>");
+          el.remove();
+        });
 
 
         result = ""
@@ -336,14 +373,49 @@
           result = result + text + "\n\n";
         })
         result = repair_pre_markups(result);
-        result =  "\\documentclass[11pt]{amsart}\n"+
+        result = result.replace(/^\\textbf\{(.*)\}\s$/g, "\sceneHeadline{ $1} ");
+        result =  "\\documentclass[11pt]{book}\n"+
           "\\usepackage{color}\n"+
           "\\usepackage{soul}\n"+
+          "\\usepackage{titlesec}\n"+
           "\\setlength{\\parindent}{1cm} % Default is 15pt\n"+
           "\\setlength{\\parskip}{1cm plus4mm minus3mm}\n"+
-          "\\begin{document}\n" + result + "\n" + "\\end{document}"
+          "\\titleformat{\\chapter}[display]  {\\normalfont\\filcenter}{\\MakeUppercase{\\chaptertitlename}~\\thechapter}{10pt}{}\n"+
+          "\\renewcommand{\\chaptertitlename}{Session}\n" +
+          "\\usepackage{fancyhdr}\n"+
+
+          "\\fancypagestyle{mainmatter}{\n"+
+          "  \\fancyhf{}\n"+
+          "  \\fancyhead[CO]{Session \\thechapter}\n"+
+          "  \\fancyhead[CE]{\\leftmark}%\\leftmark}\n"+
+          "  \\fancyhead[LO,RE]{\\thepage}\n"+
+          "}\n"+
+
+          "\\newcommand*{\\sceneHeadline}[2][]{%\n"+
+          "    \\noindent\\makebox[\\linewidth]{#1%\n"+
+          "    \\textbf{#2}\n"+
+          "    \\leaders\\hrule height \\dimexpr.5ex+.2pt\\relax depth \\dimexpr -.5ex+.2pt\\relax \\hfill\\kern0pt}% Right rule\n"+
+          "}\n"+
+
+          "\\begin{document}\n"+
+          "\\pagestyle{mainmatter}\n"+
+          "\\renewcommand{\\chaptermark}[1]{ \\markboth{#1}{} }\n"+
+          "\n\n\n" + 
+          "\\chapter{"+ chapter_title +"}\n"+ 
+          "\\setcounter{chapter}{ "+chapter_count+" }\n"+
+          result + "\n\n\n\n \\end{document}";
         $('.latex').text(result);
         // $('.guts').html(backup.html())
+
+ //        \usepackage{geometry}
+ // \geometry{
+ // a4paper,
+ // bottom=20mm,
+ // left=10mm,
+ // right=10mm,
+ // top=20mm,
+ // bindingoffset=2cm,
+ // }
       }
       latexItSafely = _.debounce(latexIt, 10000);
 
@@ -358,16 +430,16 @@
           }
           if (c.content == footnote) {
             return c;
-            console.log("  >> MATCHES!");
+            // console.log("  >> MATCHES!");
           }
-          console.log("  >> does NOT match '"+c.content+"'")
+          // console.log("  >> does NOT match '"+c.content+"'")
           return _.find(c.replies, function(r) {
             r.isReply = true;
             if (r.content == footnote) {
                return true;
-               console.log("    >>>> MATCHES!");
+               // console.log("    >>>> MATCHES!");
             } else {
-              console.log("    >>>> does NOT match reply '"+r.content+"'");
+              // console.log("    >>>> does NOT match reply '"+r.content+"'");
             }
             return r.content == footnote;
           });
@@ -375,11 +447,13 @@
       }
       function repair_pre_markups(result) {
         result = result.replace(/REBECCAxxBEGINxxFOOTNOTExxBASICxx(.*?)xxHERExxISxxTHExxFOOTNOTExx(.*?)xxHERExxISxxTHExxDATExx(.*?)xxENDxxFOOTNOTE/g, 
-          " \\footnote{ \\textbf { $1 } $2 \\textsubscript{$3}} ")
+          " \\footnote{ \\textbf { $1 } $2 \\textsubscript{$3}} ");
         result = result.replace(/REBECCAxxBEGINxxFOOTNOTExxREPLYxx(.*?)xxHERExxISxxTHExxFOOTNOTExx(.*?)xxHERExxISxxTHExxDATExx(.*?)xxENDxxFOOTNOTE/g, 
-          " \\footnote{ $\\rightarrow$ \\textbf { $1 } $2 \\textsubscript{$3}} ")
+          " \\footnote{ $\\rightarrow$ \\textbf { $1 } $2 \\textsubscript{$3}} ");
         result = result.replace(/REBECCAxxBEGINxxHIGHLIGHTxx(.*?)xxENDxxHIGHLIGHT/g, 
-          " \\hl{ $1 } ")
+          " \\hl{ $1 } ");
+        result = result.replace(/ADD_LINE_HERE/g,
+          "\\noindent\\hrulefill");
         return result;
       }
       function mark_up_comment(footnote, comment) {
@@ -394,12 +468,37 @@
         if (!comment.context || !comment.context.value) {
           return;
         }
-        if (possible_content.text().replace(/\u00A0/g, " ") == comment.context.value) {
-          possible_content.text("REBECCAxxBEGINxxHIGHLIGHTxx"+possible_content.text()+"xxENDxxHIGHLIGHT");
-          // possible_content.text(" \\hl{ "+possible_content.text()+" } ");
+        // the Google Drive API's comments don't serve non breaking spaces like this
+        possible_content_text = possible_content.text().replace(/\u00A0/g, " ").trim();
+        // undo the HTML escaping in the Google Drive API's comments content (want `á` for example, not `&#225;`)
+        comment_text = $('<span>'+comment.context.value+'</span>').text().trim();
+        if (possible_content_text == comment_text) {
+          possible_content.text("REBECCAxxBEGINxxHIGHLIGHTxx"+possible_content_text+"xxENDxxHIGHLIGHT");
+        } else if (comment_text.indexOf(possible_content_text) > -1) {
+          console.warn("I ALMOST mushed (but didn't) because I've got `"+possible_content_text+"` vs `"+comment_text+"`");
+          dangerously_grab_text(comment_text, possible_content_text, possible_content, possible_content);
         } else {
-          console.warn("I didn't mush because I've got `"+possible_content.text()+"` vs `"+comment.context.value+"`");
+          console.warn("I didn't mush because I've got `"+possible_content_text+"` vs `"+comment_text+"`");
           debugger;
+        }
+      }
+      function dangerously_grab_text(to_match, matched, currently_matched_el, start_el) {
+        console.warn("dangerously_grab_text: Dude, we're inside `dangerously_grab_text` w/ "+to_match+", "+matched+", and currently at : "+currently_matched_el.text())
+        var next_el = currently_matched_el.prev();
+        if ( !next_el.length) {
+          next_el = currently_matched_el.parent().prev().children().last();
+          matched = "\n" + matched;
+        } 
+        matched = next_el.text() + matched;
+        if (matched.replace(/(\s)/g, " ") == to_match.replace(/(\s)/g, " ")) {
+          console.warn("dangerously_grab_text: awwww yiiiiis, managed an extended match!!!  -"+to_match+"- vs ="+matched+"=");
+          start_el.text(start_el.text()+"xxENDxxHIGHLIGHT");
+          next_el.text("REBECCAxxBEGINxxHIGHLIGHTxx"+next_el.text());
+        } else if (matched.length > 1000) {
+          console.warn("dangerously_grab_text: bailing for the sake of safety... already 1000 char long... probably a failed match.  Currently at "+to_match+" vs "+matched);
+        } else {
+          console.warn("dangerously_grab_text: Well... shit... we didn't match yet.  Hows -"+to_match+"- vs ="+matched+"= looking... ?");
+          dangerously_grab_text(to_match, matched, next_el, start_el);
         }
 
       }
